<resources>

    <!-- String values -->

    <string name="app_name">Automaton</string>
    <string name="welcome">Bienvenue</string>
    <string name="super_user">Enregistrement du super utilisateur</string>
    <string name="connection">Connexion</string>
    <string name="registration">Inscription</string>
    <string name="firstname">Prénom</string>
    <string name="lastname">Nom</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="login">Se connecter</string>
    <string name="disconnect">Se déconnecter</string>
    <string name="register">S\'enregistrer</string>
    <string name="dashboard_title">Tableau de bord</string>
    <string name="users_title">Utilisateurs</string>
    <string name="refresh_button">Rafraîchir</string>
    <string name="run_button">Run</string>
    <string name="pharma_connection_button">Se connecter à l\'automate</string>
    <string name="active_conveyor">Activer le convoyeur </string>
    <string name="tablets_number">Choix du nombre de comprimés</string>
    <string name="tablets_5">5 </string>
    <string name="tablets_10">10 </string>
    <string name="tablets_15">15 </string>
    <string name="empty_bottles_arrival">Activer l\'arrivée des flacons vides </string>
    <string name="reset_bottles_counter">Réinitialiser le compteur des flacons </string>
    <string name="loading">Chargement…</string>
    <string name="cpu_status">État du CPU :</string>
    <string name="cpu_model">Modèle du CPU :</string>
    <string name="cpu_reference">Référence du CPU :</string>
    <string name="informations">Informations</string>
    <string name="error">Une erreur est survenue</string>
    <string name="pharma">Automate pharmaceutique</string>
    <string name="users_management">Gestion utilisateurs</string>
    <string name="conveyor_status">État du convoyeur : </string>
    <string name="bottles_arrival_status">État de l\'arrivée des flacons : </string>
    <string name="live_tablets_number">Nombre de comprimés en flacon : </string>
    <string name="tablets_number_read">Choix du nombre de comprimés :</string>
    <string name="filled_bottles_number">Nombre de flacons remplis : </string>
    <string name="item_servo_level">Automate d\'asservissement</string>
    <string name="_0">0</string>
    <string name="set_tablets">SET comprimés</string>
    <string name="set_bottles">SET flacons</string>
    <string name="set_tablets_bottles_number">Initialiser le nombre de comprimés et de flacons</string>
    <string name="open_first_sluicegate">Vanne n°1</string>
    <string name="open_second_sluicegate">Vanne n°2</string>
    <string name="open_third_sluicegate">Vanne n°3</string>
    <string name="open_fourth_sluicegate">Vanne n°4</string>
    <string name="auto_manual">Auto / Manuel</string>
    <string name="set_servo_level">SET Niveau de liquide</string>
    <string name="set_auto_mode_servo">SET consigne auto</string>
    <string name="set_manual_mode_servo">SET consigne manuelle</string>
    <string name="set_sluicegate_word_servo">SET mot de pilotage vanne</string>
    <string name="slot">Slot : </string>
    <string name="rack">Rack : </string>
    <string name="ip_address">Adresse IP : </string>
    <string name="manage_sluicegate_servo">Gestion des vannes</string>
    <string name="sluicegate_status_title_servo">État des vannes</string>
    <string name="sluicegate_1_status_servo_title">Vanne n°1 :</string>
    <string name="sluicegate_2_status_servo_title">Vanne n°2 :</string>
    <string name="sluicegate_3_status_servo_title">Vanne n°3 :</string>
    <string name="sluicegate_4_status_servo_title">Vanne n°4 :</string>
    <string name="read_mode_servo_title">Mode :</string>
    <string name="liquid_level_title_servo">Niveau du liquide</string>
    <string name="auto_order_read_servo">Consigne auto :</string>
    <string name="manual_order_read_servo">Consigne manuelle :</string>
    <string name="sluicegate_word_read_servo">Mot de pilotage vanne :</string>
    <string name="local_remote_servo">Local / Distant</string>
    <string name="local_remote_read_servo">Local / Distant :</string>
    <string name="manual_settings_item">Configuration manuelle</string>
    <string name="change_DB_number_manual">Modifier</string>
    <string name="change_DB_number_title">Modifier le numéro de DB</string>
    <string name="address_number_manual">Numéro de l\'adresse</string>
    <string name="send_value_manual">Valeur à envoyer</string>
    <string name="manual_send">Envoyer</string>
</resources>
