<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.DashboardActivity">

    <item android:id="@+id/item_dashboard"
        android:title="@string/dashboard_title"
        android:icon="@drawable/dashboard">
    </item>

    <item android:id="@+id/item_pharmaceutical"
        android:title="@string/pharma"
        android:icon="@drawable/pharmaceutic">
    </item>

    <item android:id="@+id/item_servo_level"
        android:title="@string/item_servo_level"
        android:icon="@drawable/level_servo">
    </item>

    <item android:id="@+id/item_admin"
        android:title="@string/users_management"
        android:icon="@drawable/admin">
    </item>

    <item android:id="@+id/item_logout"
        android:title="@string/disconnect"
        android:icon="@drawable/power">
    </item>
</menu>