<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Activity.RegisterActivity">

    <!-- Welcome title of registration -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textSize="30sp" />

    <!-- Lastname -->

    <EditText
        android:id="@+id/et_register_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorMauve"
        android:hint="@string/lastname"
        android:inputType="text"
        android:maxLines="1" />

    <!-- Firstname -->

    <EditText
        android:id="@+id/et_register_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorMauve"
        android:hint="@string/firstname"
        android:inputType="text"
        android:maxLines="1" />

    <!-- Email -->

    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorMauve"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <!-- Password -->

    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorMauve"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <!-- Register button -->

    <Button
        android:id="@+id/btn_register_registerAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/primary_btn"
        android:drawableStart="@drawable/register"
        android:onClick="onRegisterClickManager"
        android:paddingEnd="30dp"
        android:paddingStart="5dp"
        android:text="@string/register"
        android:textColor="#FFF" />

    <!-- Login button -->

    <Button
        android:id="@+id/btn_register_toLogin"
        android:layout_width="99dp"
        android:layout_height="21dp"
        android:layout_marginTop="40dip"
        android:background="@null"
        android:onClick="onRegisterClickManager"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorMauve"
        android:textSize="15sp" />

</LinearLayout>