<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Activity.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:gravity="center_horizontal"
        android:text="@string/connection"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/et_main_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorMauve"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <EditText
        android:id="@+id/et_main_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorMauve"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <Button
        android:id="@+id/btn_main_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/primary_btn"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:onClick="onMainClickManager"
        android:paddingEnd="30dp"
        android:paddingStart="5dp"
        android:text="@string/login"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/btn_main_register"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="40dip"
        android:background="@null"
        android:onClick="onMainClickManager"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/colorMauve"
        android:textSize="15sp" />

</LinearLayout>