<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DashboardActivity">

    <include layout="@layout/action_bar"/>

    <TextView
        android:id="@+id/tv_dashboard_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/error"
        android:textColor="@color/colorWhite"
        android:background="@color/colorRed"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tv_dashboard_infoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textAllCaps="true"
        android:text="@string/informations"
        android:fontFamily="sans-serif-smallcaps"
        android:drawableTop="@drawable/info"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_dashboard_numCPUTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="18sp"
        android:paddingTop="10dp"
        android:text="@string/cpu_reference"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/tv_dashboard_numCPU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/loading"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorGray"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"/>

    <TextView
        android:id="@+id/tv_dashboard_modelTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="18sp"
        android:paddingTop="10dp"
        android:text="@string/cpu_model"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/tv_dashboard_modelPU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/loading"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorGray"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"/>

    <TextView
        android:id="@+id/tv_dashboard_statusCPUTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="18sp"
        android:paddingTop="10dp"
        android:text="@string/cpu_status"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/tv_dashboard_statusCPU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/loading"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorGray"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btn_dashboard_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:backgroundTint="@color/colorMauve"
        android:drawableStart="@drawable/refresh"
        android:textColor="@color/colorWhite"
        android:onClick="refreshInfo"
        android:text="@string/refresh_button"
        android:background="@drawable/primary_btn"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btn_dashboard_powerPLC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:background="@drawable/secondary_btn"
        android:backgroundTint="@color/colorGreen"
        android:drawableStart="@drawable/run"
        android:onClick="togglePLCStatus"
        android:text="@string/run_button"
        android:textColor="@color/colorWhite"
        android:visibility="visible"/>

</LinearLayout>