<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ManualActivity">

    <!-- MANUAL ACTIVITY -->

    <!-- Toolbar -->

    <include layout="@layout/action_bar" />

    <!-- Main container -->

    <LinearLayout
        android:id="@+id/ll_manual_main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Change DB container -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:orientation="vertical">

            <!-- Update DB -->

            <TextView
                android:id="@+id/tv_manual_DB_number_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/change_DB_number_title"
                android:textColor="@color/colorDarkerGray"
                android:textSize="17sp"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_manual_DB"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/colorMauve"
                    android:hint="@string/_0"
                    android:inputType="number"
                    android:maxLines="1" />

                <Button
                    android:id="@+id/btn_manual_DB"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/secondary_btn"
                    android:backgroundTint="@color/colorMauveLight"
                    android:drawableStart="@drawable/send"
                    android:onClick="onManualClickManager"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/change_DB_number_manual"
                    android:textColor="@color/colorWhite"
                    android:visibility="visible"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

        </LinearLayout>

        <!-- Write in all DB container -->

        <LinearLayout
            android:id="@+id/ll_manual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:visibility="visible">

            <!-- Address number -->

            <TextView
                android:id="@+id/tv_manual_address_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/address_number_manual"
                android:textColor="@color/colorDarkerGray"
                android:textSize="17sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/et_manual_address"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/colorMauve"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLines="1" />

            <!-- Value to send -->

            <TextView
                android:id="@+id/tv_manual_value_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="start"
                android:text="@string/send_value_manual"
                android:textColor="@color/colorDarkerGray"
                android:textSize="17sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/et_manual_value"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/colorMauve"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLines="1" />

            <!-- Send button -->

            <Button
                android:id="@+id/btn_manual_send"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="60dp"
                android:layout_marginStart="60dp"
                android:background="@drawable/secondary_btn"
                android:backgroundTint="@color/colorMauveLight"
                android:drawableStart="@drawable/send"
                android:enabled="true"
                android:onClick="onManualClickManager"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/manual_send"
                android:textColor="@color/colorWhite"
                android:visibility="visible"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>